# CryptCloud-Platform

./: .env.example  README.md  pyproject.toml
cryptcloud/: go.mod  go.sum
cryptcloud/cmd/cryptcloud/: main.go
cryptcloud/ent/schema/: organization.go  team.go  user.go
cryptcloud/internal/logging/: opentel.go
cryptcloud/internal/temporal/: temporalManager.go
cryptcloud/internal/workflows/: deployCrypthubInstance.go
cryptcloud/pkg/config/: config.go
cryptcloud/pkg/db/: pg_database.go
deployments/envs/: .env.development  .env.production
src/cryptcloud_platform/: asgi.py
src/cryptcloud_platform/cli/: commands.py
src/cryptcloud_platform/config/: app.py  base.py
src/cryptcloud_platform/database/alembic/: alembic.ini  env.py
src/cryptcloud_platform/database/fixtures/: role.json
src/cryptcloud_platform/database/models/: team_invitation.py  team_roles.py  user.py
src/cryptcloud_platform/database/models/base/: organization.py  role.py  tag.py  team.py  user.py
src/cryptcloud_platform/database/models/organization/: organization_member.py  organization_roles.py  organization_team.py
src/cryptcloud_platform/database/models/team/: team_invitation.py  team_member.py
src/cryptcloud_platform/database/models/team_models/: team_invitation.py  team_member.py
src/cryptcloud_platform/database/models/user/: user_contact_info.py  user_role.py
src/cryptcloud_platform/domain/accounts/: dependencies.py  repositories.py  schemas.py  services.py  signals.py  urls.py
src/cryptcloud_platform/domain/web/: controllers.py
src/cryptcloud_platform/management/kubernetes/: startup_flows.py
src/cryptcloud_platform/management/logging/prometheus_logging/: README.md
src/cryptcloud_platform/server/: builder.py  routers.py
testers/python-1/deployments/envs/: .env.development  .env.production
testers/python-1/scripts/linux/: setup.sh
testers/python-1/src/cryptcloud_platform/: asgi.py
testers/python-1/src/cryptcloud_platform/config/: base.py  constants.py
testers/python-1/src/cryptcloud_platform/server/: builder.py  plugins.py
testers/python-1/tests/components/: COMPONENTS.md
(+23 files in other folders)
