[project]
name = "CryptCloud-Platform"
version = "0.0.1"
description = "Paas 4 Hax0rs"
authors = [
    {name = "cam", email = "cammclain@skiff.com"},
]
dependencies = [
    "litestar[types]>=2.9.1",
    "temporalio>=1.6.0",
    "advanced-alchemy[litestar]>=0.17.1",
    "kubernetes>=30.1.0",
    "alembic>=1.13.2",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.31",
    "sqlalchemy-media>=0.17.4",
    "geoalchemy>=0.7.2",
    "logging>=0.4.9.6",
    "litestar-saq>=0.1.21",
    "sporestack>=13.0.0",
    "slugify>=0.0.1",
    "sqlalchemy-utils>=0.41.2",
    "structlog>=24.2.0",
    "msgspec>=0.18.6",
    "bcrypt>=4.1.3",
    "pick>=2.3.2",
    "litestar-granian>=0.5.0",
    "litestar-vite>=0.1.22",
    "apache-airflow>=1.10.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true
